@@ -6,6 +6,8 @@
 * Fixed a bug where the direct children of the homepage would get a leading ``/``
   character when the homepage was moved or published.
 * Fixed a bug where non-staff user would be able to open empty structure board
+* Fixed a bug where a static file from Django admin was referenced that no
+  longer existed in Django 1.9 and up.
 
 
 === 3.5.1 (2018-03-05) ===
